fix: container breaking alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -87,6 +87,7 @@ hr {
 
 /* ===== Layout ===== */
 .container {
+  width: 100%;
   max-width: 48rem;
   margin: 0 auto;
   padding: 0 1rem;
